[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pacoh-smbrl"
requires-python = ">=3.10.10"
license = { text = "LICENSE" }
readme = "README.md"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "pre-commit==2.15.0",
    "mypy==1.2.0",
    "pytest==6.2.5",
    "isort==5.12.0",
    "flake8==6.0.0",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
show_column_numbers = true
allow_untyped_defs = true
allow_subclassing_any = true
allow_untyped_calls = true
strict_optional = true
